# pyapid

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  dependabot.yml  pylama.ini  pyproject.toml
docs/: cla.md  style-guide.md
pyapid/: api.py  config.py  database.py  errors.py  json.py  reports.py  types.py
tests/: test_api.py  test_units.py
tests/api-tests/: api.http  api.sh
web/: index.html
