[tool.poetry]
name = "pyapid"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.17.6"
fastapi = "^0.75.2"
structlog = "^21.5.0"
prometheus-client = "^0.14.1"
opentelemetry-sdk = "^1.11.1"
yfinance = "^0.1.70"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.267"
pytest = "^7.4.0"
httpie = "^3.1.0"
pylama = "^8.4.1"
black = "^22.3.0"
pyflakes = "^2.4.0"
mypy = "^0.942"
hypothesis = "^6.44.0"
pycodestyle = "^2.8.0"
pylint = "^2.13.7"
requests = "^2.27.1"
ipython = "^8.9.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-ra -vvv --cov-report=term-missing --cov=pyapid --cov-branch"
